# structured-transparency-feedback

./: ARCHITECTURE.md  DATAFLOW.md  Dockerfile.event  Dockerfile.landing  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PUBLISH_TO_QUARTZ.md  README.md  build.sh  pyproject.toml  run.sh  test_full_flow.sh  test_report.py  test_report_mock.py
event_server/: Dockerfile  __init__.py  app.py  llm.py  models.py  routes.py
event_server/static/: worker.js
event_server/templates/: README_ADMIN.md  admin.html  admin.html.source  participant.html
event_server/tests/: __init__.py  test_llm.py  test_models.py  test_sample_data.py
landing_page/: Dockerfile  __init__.py  app.py  routes.py
landing_page/templates/: confirmation.html  index.html
